# modulo

./: README.MD  pyproject.toml  requirements.txt
docs/: README.md  conf.py  index.rst
docs/_build/doctrees/: README.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/: main.py
src/diga_ola/: main.py
src/utils/: areas.py  utils.py
